added some pictures

--- a/index.html
+++ b/index.html
@@ -2,33 +2,64 @@
 <html>
   <head>
   	<meta charset="UTF-8">
+    <link rel="icon" href="images/happylogo.png">
   	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   	<link rel="stylesheet" href="style.css">
   	<title>Happy's website</title>
   </head>
   <body>
+    <header>
+      <div class="wrapper">
+        <div class="logo">
+          <img src="images/happylogo.png" alt="click for home page"
+        </div>
+        <ul class="nav-area">
+          <li><a href="#">Home</a></li>
+          <li><a href="#about">About Me</a></li>
+          <li><a href="#accomplishments">Accomplishments</a></li>
+          <li><a href="#goodgirl">Good Girl</a></li>
+        </ul>
+      </div>
+    </header>
   	<section id="main">
   		<div class="box">
-  			<div class="imagecontainer">
-  				<img id="happyprofile" src="IMG_1591.jpg" alt="Happy and cherry blossoms">
+  			<div class="left">
+  				<img id="happyprofile" src="images/IMG_1591.jpg" alt="Happy and cherry blossoms">
   			</div>
-  			<div class="titlescontainer">
+  			<div class="right">
     			<h1>Happy</h1>
-    			<h5>A chonky shoobe!</h5>
+    			<h5>A chonky doge!</h5>
     		</div>
-    		
+    	</div>
 	</section>
 	<section id="about">
-		<h2>About me</h2>
+		<h2>About Me</h2>
 		<p>Henlo hooman who's reading this! My name is Happy, I am 6 years old, and I am a lorge Shiba Inu! I love sleeping, stretching, and basking in the sun, but I don't consider myself lazy, I'm just enjoying life. I have a family, they give me pets and play with me, but my absolute favorite part about them is they drop some food while they're eating, so I take my chances and CHOMP!</p>
-  </body>
+  </section>
+  <section id="accomplishments">
+    <h2>Accomplishments</h2>
+    <ul>
+      <li>Sit</li>
+      <li>Shake</li>
+      <li>Spin</li>
+      <li>Up Up</li>
+      <li>Down</li>
+    </ul>
+  </section>
+  <section id="goodgirl">
+    <h2>Who's a good girl?</h2>
+    <p>I'm the goodest girl! You should know that!</p>
+    <img src="images/happylogo.png" alt="happy's logo">
+  </section>
   <footer>
-  	<ul>
-  		<li><a href="https://www.instagram.com/doge_cheeks/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
+    <h5>Check out my Instagram and Github repo below!</h5>
+    <ul>
+      <li><a href="https://www.instagram.com/doge_cheeks/" target="_blank"><i class="fa fa-instagram" aria-hidden="true"></i>
 </a></li>
-		<li><a href="#"><i class="fa fa-github" aria-hidden="true"></i>
+    <li><a href="https://github.com/rileychou/happy" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
 </a></li>
-  	</ul>
-  	<small>© Created by Riley Chou. All rights reserved.</small>
+    </ul>
+    <small>© Created by Riley Chou. All rights reserved.</small>
   </footer>
+  </body>
 </html>
