--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="wrapper">
         <div class="logo">
-          <img src="images/happylogo.png" alt="click for home page"
+          <a href="#"><img src="images/happylogo.png" alt="click for home page"</a>
         </div>
         <ul class="nav-area">
           <li><a href="#">Home</a></li>
@@ -44,6 +44,7 @@
       <li>Spin</li>
       <li>Up Up</li>
       <li>Down</li>
+      <li>More photogenic than everyone in our school combined</li>
     </ul>
   </section>
   <section id="goodgirl">
@@ -59,7 +60,9 @@
     <li><a href="https://github.com/rileychou/happy" target="_blank"><i class="fa fa-github" aria-hidden="true"></i>
 </a></li>
     </ul>
-    <small>© Created by Riley Chou. All rights reserved.</small>
+    <small>©Riley Chou. Do Not Boop™ created by Damian Yang. All rights reserved.</small>
   </footer>
+
+  <script src="script.js"></script>
   </body>
 </html>
