--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <header>
       <div class="wrapper">
         <div class="logo">
-          <a href="#"><img src="images/happylogo.png" alt="click for home page"</a>
+          <a href="#"><img src="images/happylogo.png" alt="click for home page">
         </div>
         <ul class="nav-area">
           <li><a href="#">Home</a></li>
