accomplishments and toy gallery

--- a/index.html
+++ b/index.html
@@ -37,15 +37,74 @@
 		<p>Henlo hooman who's reading this! My name is Happy, I am 6 years old, and I am a lorge Shiba Inu! I love sleeping, stretching, and basking in the sun, but I don't consider myself lazy, I'm just enjoying life. I have a family, they give me pets and play with me, but my absolute favorite part about them is they drop some food while they're eating, so I take my chances and CHOMP!</p>
   </section>
   <section id="accomplishments">
-    <h2>Accomplishments</h2>
-    <ul>
-      <li>Sit</li>
-      <li>Shake</li>
-      <li>Spin</li>
-      <li>Up Up</li>
-      <li>Down</li>
-      <li>More photogenic than everyone in our school combined</li>
-    </ul>
+    <h2>Skills and Accomplishments</h2>
+    <div class="grid-container">
+      <div class="grid-item">
+        <h5>Sit</h5>
+        <p>When I feels like it, I do sits for treats</p>
+      </div>
+      <div class="grid-item">
+        <h5>Shake</h5>
+        <p>I hold up my paw to beg for food, and my family always gives in hehe</p>
+      </div>
+      <div class="grid-item">
+        <h5>Down</h5>
+        <p>I do this when am in trouble bc big scary</p>
+      </div>
+      <div class="grid-item">
+        <h5>Up</h5>
+        <p>When food is very high, I do a hop to go UP!</p>
+      </div>
+      <div class="grid-item">
+        <h5>Spin</h5>
+        <p>Sometimes owners like to spin treats around, but they can't fool me, becuz I do a spin with the treats!</p>
+      </div>
+      <div class="grid-item">
+        <h5>Photogenic</h5>
+        <p>I am more photogenic than everyone in my whole town combined. Periodt.</p>
+      </div>
+    </div>
+  </section>
+  <section id="mytoys">
+    <h2>My Toys</h2>
+    <h5>Gallery of my toys!</h5>
+    <div class="responsive">
+      <div class="toygallery">
+        <img src="images/ropes.JPG" alt="ropes" width="300">
+        <div class="description">I love tug of war</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="toygallery">
+        <img src="images/squeakydog.JPG" alt="squeakydog" width="300">
+        <div class="description">Green doggo squeaky</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="toygallery">
+        <img src="images/patricia.JPG" alt="patricia the octopus" width="300">
+        <div class="description">Patricia the octopus</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="toygallery">
+        <img src="images/squeakyfox.JPG" alt="fox" width="300">
+        <div class="description">Small squeaky fox</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="toygallery">
+        <img src="images/hawaiisloth.JPG" alt="sloth" width="300">
+        <div class="description">stylish sloth</div>
+      </div>
+    </div>
+    <div class="responsive">
+      <div class="toygallery">
+        <img src="images/flyingpig.JPG" alt="pig" width="300">
+        <div class="description">Pigs can fly!</div>
+      </div>
+    </div>
+    <div class="clearfix"></div>
   </section>
   <section id="goodgirl">
     <h2>Who's a good girl?</h2>
