added toy section on navbar

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         <ul class="nav-area">
           <li><a href="#">Home</a></li>
           <li><a href="#about">About Me</a></li>
+          <li><a href="#mytoys">Toy gallery</a></li>
           <li><a href="#accomplishments">Accomplishments</a></li>
           <li><a href="#goodgirl">Good Girl</a></li>
         </ul>
